<resources>
    <string name="app_name">Jira Estimator</string>
    <string name="title_activity_login">Jira Estimator - Login</string>

    <!-- Login Activity-->
    <string name="prompt_url">Jira URL</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Token</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_url">Not a valid Jira Cloud URL</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_token">Token / password must be entered</string>
    <string name="login_api_error_message">An error occurred please check all entries are valid and Jira Cloud is not down</string>

    <!-- Project Activity -->
    <string name="project_name">Project Name</string>

    <!-- Issue Activities -->
    <string name="title_issue_list">Issues</string>
    <string name="title_issue_detail">Issue Detail</string>
    <string name="points_label">Current Points:</string>
    <string name="point_placeholder">13</string>

    <string name="host_session">Host Session</string>
    <string name="available_sessions">Available Sessions</string>
    <string name="session_participants_title">Participants</string>
    <string name="estimate_start_voting">Start Voting</string>
    <string name="error_host_disconnect">Error: Host disconnected</string>
    <string name="undecided_vote_response">Not enough users have an estimate to proceed</string>
    <string name="successful_vote_response">Story Points successfully estimated at %1$s points</string>
    <string name="error_vote_response">An error occurred during estimation of %1$s points. Please try again</string>
    <string name="estimate">Estimate</string>
    <string name="unable_to_login">Unable to connect, please login again</string>
    <string name="project_not_found">Project not found, please select a new project</string>
    <string name="user_connected_message">User %1$s connected</string>
    <string name="user_disconnected_message">User %1$s disconnected</string>

    <string name="widget_empty_text">No Issue selected</string>

    <!-- Preferences -->
    <string name="menu_preference">Settings</string>
    <string name="logout_pref">Logout</string>
    <string name="project_pref">Change Project</string>

    <string name="test_interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="description_placeholder">Story Description</string>
    <string name="show_in_widget">Show in widget</string>
    <string name="widget_pref">widget_issue_pref</string>
    <string name="no_description">No Description Set</string>

    <!-- Accessibility content descriptions   -->
    <string name="signin_button_cd">Sign in button</string>
    <string name="url_input_cd">Jira URL text box</string>
    <string name="email_input_cd">Jira email text box</string>
    <string name="token_input_cd">Jira token text box</string>
    <string name="show_in_widget_cd">Show in widget checkbox</string>
    <string name="estimate_button">Estimate button</string>
    <string name="host_session_button">Host session button</string>
    <string name="start_vote_button">Start vote button</string>


</resources>